tests/compile_tests/ghost_cell/token_noescape.rs
use ghost_cell::GhostToken;

fn main() {
    GhostToken::new(|token| token);
}
